# vacancies_project

./: README.md  config.py  main.py  pyproject.toml  vacancies.json
data/: vacancies.json
src/: apis.py  filesaver.py  utils.py  vacancy.py
