[tool.poetry]
name = "vacancies-project"
version = "0.1.0"
description = ""
authors = ["marinaprojects <155964514+marinaprojects@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
